# portswigger-labs

./: .eslintrc.cjs  .prettierignore  .prettierrc.json  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
config/: accounts.ts  config.js  config.ts  jwt.secrets.list  proxy.json
src/config/: credentials.ts  getJwtSecrets.ts  getPasswords.ts  getProxy.ts
src/labs/authentication/2fa_bypass_using_a_brute_force_attack/: app.js  lab.ts  lab_link.txt  pseudo_code.txt
src/labs/authentication/brute_forcing_a_stay_logged_in_cookie/: app.js  lab.ts  lab_link.txt
src/labs/csrf/csrf_vulnerability_with_no_defenses/: app.js  lab.ts  lab_link.txt
src/labs/csrf/csrf_where_token_is_not_tied_to_user_session/: app.js  exploit.html  lab.ts  lab_link.txt
src/labs/csrf/csrf_where_token_is_tied_to_non_session_cookie/: app.js  exploit.html  lab.ts  lab_link.txt
src/labs/csrf/csrf_where_token_validation_depends_on_request_method/: app.js  exploit.html  lab.js  lab.ts  lab_link.txt
src/labs/jwt/jwt_authentication_bypass_via_algorithm_confusion_with_no_exposed_key/: derive_public_key.py  lab.ts  lab_link.txt  pyproject.toml  requirements.txt
src/utils/: Cookie.js  Cookie.ts  config.js  exploitServer.js  exploitServer.ts  extractCookie.js  extractCookie.ts  extractCsrfToken.js  extractCsrfToken.ts  getFileContent.js  getFileContent.ts  getParsedInput.js  getParsedInputFromUser.js  getParsedInputFromUser.ts  handeError.js  httpClient.js  httpClient.ts  pressEnterToContinue.js  pressEnterToContinue.ts  runTasks.js  runTasks.ts  sleep.ts  toBase64Url.ts
(+28 files in other folders)
